force-app/main/default/objects/Contact/fields/Auto_Generate_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generate_Client_ID__c</fullName>
    <label>Auto Generate Client ID</label>
    <type>AutoNumber</type>
</CustomField>