force-app/main/default/objects/Contact/fields/AVSFQB__QBName__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__QBName__c</fullName>
    <formula>FirstName &amp;&quot; &quot;&amp; LastName &amp;&quot;-&quot;&amp; Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QBName</label>
    <type>Text</type>
</CustomField>