force-app/main/default/objects/Contact/fields/B12_AMINO_ACID_INJECTION__c.field-meta.xml
<CustomField>
    <fullName>B12_AMINO_ACID_INJECTION__c</fullName>
    <label>B12 &amp; AMINO ACID INJECTION</label>
    <type>Date</type>
</CustomField>