force-app/main/default/objects/Contact/fields/Before_and_After__c.field-meta.xml
<CustomField>
    <fullName>Before_and_After__c</fullName>
    <label>Before and After</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>