force-app/main/default/objects/Contact/fields/BOTOX_DYSPORT_TREATMENT__c.field-meta.xml
<CustomField>
    <fullName>BOTOX_DYSPORT_TREATMENT__c</fullName>
    <label>BOTOX/DYSPORT TREATMENT</label>
    <type>Date</type>
</CustomField>