force-app/main/default/objects/Contact/fields/BTL_VANQUISH_ME__c.field-meta.xml
<CustomField>
    <fullName>BTL_VANQUISH_ME__c</fullName>
    <label>BTL VANQUISH ME</label>
    <type>Date</type>
</CustomField>