force-app/main/default/objects/Contact/fields/Choose_Consent_Forms_to_Sign__c.field-meta.xml
<CustomField>
    <fullName>Choose_Consent_Forms_to_Sign__c</fullName>
    <inlineHelpText>Choose the consent form(s) you wish the client to sign today</inlineHelpText>
    <label>Choose Consent Forms to Sign</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B12 &amp; AMINO ACID INJECTION INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>Billing Change</fullName>
            </value>
            <value>
                <fullName>BOTOX/DYSPORT TREATMENT INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>BTL VANQUISH ME INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>CMS CANCELLATION NOTICE</fullName>
            </value>
            <value>
                <fullName>DERMAPLANE EXFOLIATION INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>EMSCULPT INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>FACIAL PEEL INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>FACIAL TREATMENT INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>FRACTIONAL LASER INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>GENERAL CONSENT</fullName>
            </value>
            <value>
                <fullName>HYALURONIDASE ADMINISTRATION CONSENT</fullName>
            </value>
            <value>
                <fullName>INFORMED CONSENT FOR MEDICALLY MANAGEMENT WEIGHT LOSS THERAPY</fullName>
            </value>
            <value>
                <fullName>INTENSE PULSED LIGHT (IPL) INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>JUVEDERM INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>JUVEDERMVOLUMA INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>KYBELLA Informed Consent</fullName>
            </value>
            <value>
                <fullName>LASER HAIR REMOVAL INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>LASER VEIN TREATMENT INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>NITRO-BID OINTMENT CONSENT</fullName>
            </value>
            <value>
                <fullName>PHOTOGRAPHY CONSENT</fullName>
            </value>
            <value>
                <fullName>RESTYLANE INJECTION INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>SCULPTRA AESTHETIC INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>SKINPEN INFORMED CONSENT</fullName>
            </value>
            <value>
                <fullName>SKINVIVE CONSENT</fullName>
            </value>
            <value>
                <fullName>TATTOO LASER TREATMENT INFORMED CONSENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>