force-app/main/default/objects/Contact/fields/Client_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Internal_ID__c</fullName>
    <label>Client Internal ID</label>
    <length>175</length>
    <type>Text</type>
</CustomField>