force-app/main/default/objects/Contact/fields/Consultation__c.field-meta.xml
<CustomField>
    <fullName>Consultation__c</fullName>
    <label>Consultation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>