force-app/main/default/objects/Contact/fields/DERMAPLANE_EXFOLIATION__c.field-meta.xml
<CustomField>
    <fullName>DERMAPLANE_EXFOLIATION__c</fullName>
    <label>DERMAPLANE EXFOLIATION</label>
    <type>Date</type>
</CustomField>