force-app/main/default/objects/Contact/fields/Emergency_Contact_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Work_Phone__c</fullName>
    <label>Emergency Contact Work Phone</label>
    <type>Phone</type>
</CustomField>