force-app/main/default/objects/Contact/fields/Employer_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address_1__c</fullName>
    <label>Employer Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>