force-app/main/default/objects/Contact/fields/Employer_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address_2__c</fullName>
    <label>Employer Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>