force-app/main/default/objects/Contact/fields/Employer_Company__c.field-meta.xml
<CustomField>
    <fullName>Employer_Company__c</fullName>
    <label>Employer Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>