force-app/main/default/objects/Contact/fields/Employer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Employer_Zip_Code__c</fullName>
    <label>Employer Zip Code</label>
    <length>175</length>
    <type>Text</type>
</CustomField>