force-app/main/default/objects/Contact/fields/FACIAL_PEEL__c.field-meta.xml
<CustomField>
    <fullName>FACIAL_PEEL__c</fullName>
    <label>FACIAL PEEL</label>
    <type>Date</type>
</CustomField>