force-app/main/default/objects/Contact/fields/FACIAL_TREATMENT__c.field-meta.xml
<CustomField>
    <fullName>FACIAL_TREATMENT__c</fullName>
    <label>FACIAL TREATMENT</label>
    <type>Date</type>
</CustomField>