force-app/main/default/objects/Contact/fields/GENERAL__c.field-meta.xml
<CustomField>
    <fullName>GENERAL__c</fullName>
    <label>GENERAL</label>
    <type>Date</type>
</CustomField>