force-app/main/default/objects/Contact/fields/INTENSE_PULSED_LIGHT_IPL__c.field-meta.xml
<CustomField>
    <fullName>INTENSE_PULSED_LIGHT_IPL__c</fullName>
    <label>INTENSE PULSED LIGHT (IPL)</label>
    <type>Date</type>
</CustomField>