force-app/main/default/objects/Contact/fields/JUVEDERM__c.field-meta.xml
<CustomField>
    <fullName>JUVEDERM__c</fullName>
    <label>JUVEDERM</label>
    <type>Date</type>
</CustomField>