force-app/main/default/objects/Contact/fields/KYBELLA__c.field-meta.xml
<CustomField>
    <fullName>KYBELLA__c</fullName>
    <label>KYBELLA</label>
    <type>Date</type>
</CustomField>