force-app/main/default/objects/Contact/fields/Last_seen_date__c.field-meta.xml
<CustomField>
    <fullName>Last_seen_date__c</fullName>
    <label>Last seen date</label>
    <type>DateTime</type>
</CustomField>