force-app/main/default/objects/Contact/fields/Membership_type__c.field-meta.xml
<CustomField>
    <fullName>Membership_type__c</fullName>
    <label>Membership Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Growing Young Empower</fullName>
            </value>
            <value>
                <fullName>Growing Young Enhance</fullName>
            </value>
            <value>
                <fullName>Growing Young Enrich</fullName>
            </value>
            <value>
                <fullName>Body Contour</fullName>
            </value>
            <value>
                <fullName>Non-Member</fullName>
                <default>true</default>
                <label>Non-Member</label>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Bad Account</fullName>
            </value>
            <value>
                <fullName>Not Allowed on Premise</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>BDE 20</fullName>
            </value>
            <value>
                <fullName>BD Elite</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Platinum 20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>