force-app/main/default/objects/Contact/fields/New_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Client_ID__c</fullName>
    <formula>LEFT( Id , 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client ID</label>
    <type>Text</type>
</CustomField>