force-app/main/default/objects/Contact/fields/Next_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Appointment_Date__c</fullName>
    <label>Next Appointment Date</label>
    <type>Date</type>
</CustomField>