force-app/main/default/objects/Contact/fields/NITRO_BID_OINTMENT__c.field-meta.xml
<CustomField>
    <fullName>NITRO_BID_OINTMENT__c</fullName>
    <label>NITRO-BID OINTMENT</label>
    <type>Date</type>
</CustomField>