force-app/main/default/objects/Contact/fields/Patient_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address_1__c</fullName>
    <label>Client Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>