force-app/main/default/objects/Contact/fields/Patient_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address_2__c</fullName>
    <label>Client Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>