force-app/main/default/objects/Contact/fields/Patient_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birth_Date__c</fullName>
    <label>Client Birth Date</label>
    <type>Date</type>
</CustomField>