force-app/main/default/objects/Contact/fields/Patient_City__c.field-meta.xml
<CustomField>
    <fullName>Patient_City__c</fullName>
    <label>Client City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>