force-app/main/default/objects/Contact/fields/Patient_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Patient_E_Mail__c</fullName>
    <label>Client E-Mail</label>
    <type>Email</type>
</CustomField>