force-app/main/default/objects/Contact/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <label>Client First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>