force-app/main/default/objects/Contact/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <label>Client ID</label>
    <length>175</length>
    <type>Text</type>
</CustomField>