force-app/main/default/objects/Contact/fields/Patient_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Patient_Mobile_Phone__c</fullName>
    <label>Client Mobile Phone</label>
    <type>Phone</type>
</CustomField>