force-app/main/default/objects/Contact/fields/Patient_Note__c.field-meta.xml
<CustomField>
    <fullName>Patient_Note__c</fullName>
    <label>Client Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>