force-app/main/default/objects/Contact/fields/Patient_SSN__c.field-meta.xml
<CustomField>
    <fullName>Patient_SSN__c</fullName>
    <label>Client SSN</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>